Begin Advanced example using 1040a

--- a/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
@@ -13,6 +13,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2017 US 1040A Tax Return Form"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -36,7 +43,7 @@
     "sys.path.append(\"../pylib/\")\n",
     "from s3m_dm import DMType\n",
     "from s3m_struct import ClusterType, XdAdapterType\n",
-    "from s3m_xdt import XdStringType, XdTemporalType, XdOrdinalType, XdCountType"
+    "from s3m_xdt import XdStringType, XdTemporalType, XdOrdinalType, XdCountType, XdBooleanType, XdQuantityType, XdTemporalType, XdOrdinalType, XdFileType"
    ]
   },
   {
@@ -47,7 +54,7 @@
     }
    },
    "source": [
-    "Review the documentation of DMType. "
+    "Uncomment the line below to review the documentation of DMType. "
    ]
   },
   {
@@ -65,164 +72,171 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "We will reuse our ClusterType example and create the DMType (Data Model) wrapper around it.\n",
-    "\n",
-    "<div class=\"logo-container\">\n",
-    "  <div class=\"logo\"><img src=\"images/Data-Entry-Form.png\" height=\"400\" width=\"400\"/></div>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we are going to execute the same code we built in the ClusterType Example."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ERF = ClusterType('Employee Record Form')\n",
-    "ERF.definition_url = 'http://s3model.com/examples/ERF'\n",
-    "\n",
-    "choice = []\n",
-    "choice.append(('Add New','https://datainsights.tech/examples/AddNewRecord'))\n",
-    "choice.append(('Modify','https://datainsights.tech/examples/ModifyRecord'))\n",
-    "choice.append(('Delete','https://datainsights.tech/examples/DeleteRecord'))\n",
-    "action = XdStringType(\"Record Action\")\n",
-    "action.docs = \"Select the action to perform.\"\n",
-    "action.definition_url = 'http://s3model.com/examples/action_choice'\n",
-    "action.enums = choice\n",
-    "action.published = True\n",
-    "\n",
-    "empnum = XdStringType('Employee Number')\n",
-    "empnum.docs = 'An employee number consists of a single character department code (A-E) and 5 digits (0-9).'\n",
-    "empnum.definition_url = 'https://datainsights.tech/examples/EmployeeNumber'\n",
-    "empnum.regex = '[A-E]{1}[0-9]{5}'\n",
-    "empnum.published = True\n",
-    "\n",
-    "joined = XdTemporalType(\"Date of Joining\")\n",
-    "joined.docs = \"Require a full date. Disallow all others.\"\n",
-    "joined.definition_url = 'http://s3model.com/examples/joindate'\n",
-    "joined.cardinality = ('date', [1,1])\n",
-    "joined.cardinality = ('time', [0,0])\n",
-    "joined.cardinality = ('datetime', [0,0])\n",
-    "joined.cardinality = ('day', [0,0])\n",
-    "joined.cardinality = ('month', [0,0])\n",
-    "joined.cardinality = ('year', [0,0])\n",
-    "joined.cardinality = ('year_month', [0,0])\n",
-    "joined.cardinality = ('month_day', [0,0])\n",
-    "joined.cardinality = ('duration', [0,0])\n",
-    "joined.published = True\n",
-    "\n",
-    "fname = XdStringType('First Name')\n",
-    "fname.docs = \"The employee's first name.\"\n",
-    "fname.definition_url = 'https://datainsights.tech/examples/EmployeeFirstName'\n",
-    "fname.cardinality = ('value', [1,1])\n",
-    "fname.published = True\n",
-    "\n",
-    "lname = XdStringType('Last Name')\n",
-    "lname.docs = \"The employee's last name.\"\n",
-    "lname.definition_url = 'https://datainsights.tech/examples/EmployeeLastName'\n",
-    "lname.cardinality = ('value', [1,1])\n",
-    "lname.published = True\n",
-    "\n",
-    "desig = XdStringType('Designation')\n",
-    "desig.docs = \"The employee's designation.\"\n",
-    "desig.definition_url = 'https://datainsights.tech/examples/EmployeeDesignation'\n",
-    "jobs = []\n",
-    "jobs.append(('Manager', 'https://datainsights.tech/examples/EmployeeDesignation#Manager'))\n",
-    "jobs.append(('Foreman', 'https://datainsights.tech/examples/EmployeeDesignation#Forman'))\n",
-    "jobs.append(('LineWorker', 'https://datainsights.tech/examples/EmployeeDesignation#LineWorker'))\n",
-    "desig.enums = jobs\n",
-    "desig.published = True\n",
-    "\n",
-    "dob = XdTemporalType(\"Date of Birth\")\n",
-    "dob.docs = \"DOB allows a full date or just a month/year.\"\n",
-    "dob.definition_url = 'http://s3model.com/examples/dob'\n",
-    "dob.cardinality = ('date', [0,1])\n",
-    "dob.cardinality = ('time', [0,0])\n",
-    "dob.cardinality = ('datetime', [0,0])\n",
-    "dob.cardinality = ('day', [0,0])\n",
-    "dob.cardinality = ('month', [0,0])\n",
-    "dob.cardinality = ('year', [0,0])\n",
-    "dob.cardinality = ('year_month', [0,1])\n",
-    "dob.cardinality = ('month_day', [0,0])\n",
-    "dob.cardinality = ('duration', [0,0])\n",
-    "dob.published = True\n",
-    "\n",
-    "qual = XdStringType('Highest Qualification')\n",
-    "qual.docs = \"The employee's highest level of qualification.\"\n",
-    "qual.definition_url = 'https://datainsights.tech/examples/EmployeeQualification'\n",
-    "level = []\n",
-    "level.append(('Level1', 'https://datainsights.tech/examples/EmployeeQualification#Level1'))\n",
-    "level.append(('Level2', 'https://datainsights.tech/examples/EmployeeQualification#Level2'))\n",
-    "level.append(('Level3', 'https://datainsights.tech/examples/EmployeeQualification#Level3'))\n",
-    "qual.enums = level\n",
-    "qual.published = True\n",
-    "\n",
-    "unit = XdStringType('Years')\n",
-    "unit.docs = \"Count of the years of experience.\"\n",
-    "unit.definition_url = 'https://datainsights.tech/examples/Experience'\n",
-    "unit.published = True\n",
-    "\n",
-    "exp = XdCountType(\"Years of Experience\")\n",
-    "exp.docs = \"Record the number of years of experience of the employee.\"\n",
-    "exp.definition_url = 'https://datainsights.tech/examples/Experience#Years'\n",
-    "exp.min_inclusive = 0\n",
-    "exp.max_inclusive = 99\n",
-    "exp.units = unit\n",
-    "exp.published = True\n",
-    "\n",
-    "# add items to the Cluster\n",
-    "a = XdAdapterType()\n",
-    "a.value = action \n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = empnum \n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = joined  \n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = fname \n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = lname\n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = desig\n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = dob\n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = qual\n",
-    "ERF.items = a\n",
-    "a = XdAdapterType()\n",
-    "a.value = exp\n",
-    "ERF.items = a\n",
-    "ERF.published = True"
+    "US1040a = DMType(\"1040A for 2017\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClusterType : Personal Information, ID: cjoaehdq90001dpbih53ubkag\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create the Data model instance.\n",
-    "DM = DMType('Employee Record')"
+    "# build a cluster for the personal information\n",
+    "pi = ClusterType('Personal Information')\n",
+    "pi.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15'\n",
+    "fname = XdStringType(\"First name and middle initial\")\n",
+    "fname.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#fname'\n",
+    "fname.description = \"Your first name and initial\"\n",
+    "fname.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = fname\n",
+    "pi.items = a\n",
+    "\n",
+    "lname = XdStringType(\"Last name\")\n",
+    "lname.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#lname'\n",
+    "lname.description = \"Your last name\"\n",
+    "lname.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = lname\n",
+    "pi.items = a\n",
+    "\n",
+    "ssn = XdStringType(\"Social Security Number\")\n",
+    "ssn.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#ssn'\n",
+    "ssn.description = \"Your SSN\"\n",
+    "ssn.regex = '[0-9]{3}-[0-9]{2}-[0-9]{4}'\n",
+    "ssn.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = ssn\n",
+    "pi.items = a\n",
+    "\n",
+    "s_fname = XdStringType(\"Spouse's first name and middle initial\")\n",
+    "s_fname.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#s_fname'\n",
+    "s_fname.description = \"Spouse's first name and middle initial\"\n",
+    "s_fname.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = s_fname\n",
+    "pi.items = a\n",
+    "\n",
+    "s_lname = XdStringType(\"Spouse's last name\")\n",
+    "s_lname.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#s_lname'\n",
+    "s_lname.description = \"Spouse's last name.\"\n",
+    "s_lname.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = s_lname\n",
+    "pi.items = a\n",
+    "\n",
+    "s_ssn = XdStringType(\"Spouse's Social Security Number\")\n",
+    "s_ssn.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#s_ssn'\n",
+    "s_ssn.regex = '[0-9]{3}-[0-9]{2}-[0-9]{4}'\n",
+    "s_ssn.description = \"Spouse's Social Security Number.\"\n",
+    "s_ssn.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = s_ssn\n",
+    "pi.items = a\n",
+    "\n",
+    "street_name = XdStringType(\"Street name\")\n",
+    "street_name.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#street_name'\n",
+    "street_name.description = \"Home address street. If you have a P.O. box, see instructions.\"\n",
+    "street_name.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = street_name\n",
+    "pi.items = a\n",
+    "\n",
+    "street_num = XdStringType(\"Street number\")\n",
+    "street_num.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#street_number'\n",
+    "street_num.description = \"Home address number.\"\n",
+    "street_num.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = street_num\n",
+    "pi.items = a\n",
+    "\n",
+    "appt_num = XdStringType(\"Apartment number\")\n",
+    "appt_num.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#street_number'\n",
+    "appt_num.description = \"Home address apartment number.\"\n",
+    "appt_num.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = appt_num\n",
+    "pi.items = a\n",
+    "\n",
+    "city = XdStringType(\"US City\")\n",
+    "city.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#city'\n",
+    "city.description = \"City, town or post office in the United States\"\n",
+    "city.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = city\n",
+    "pi.items = a\n",
+    "\n",
+    "state = XdStringType(\"State\")\n",
+    "state.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#state'\n",
+    "state.description = \"US State\"\n",
+    "state.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = state\n",
+    "pi.items = a\n",
+    "\n",
+    "pc = XdStringType(\"US Zip Code\")\n",
+    "pc.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#zipcode'\n",
+    "pc.description = \"US Zip code.\"\n",
+    "pc.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = pc\n",
+    "pi.items = a\n",
+    "\n",
+    "country = XdStringType(\"Foreign Country\")\n",
+    "country.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#country'\n",
+    "country.description = \"Foreign country if not in the United States.\"\n",
+    "country.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = country\n",
+    "pi.items = a\n",
+    "\n",
+    "fstate = XdStringType(\"Foreign State\")\n",
+    "fstate.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#state'\n",
+    "fstate.description = \"Foreign province/state/county\"\n",
+    "fstate.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = fstate\n",
+    "pi.items = a\n",
+    "\n",
+    "fpc = XdStringType(\"Postal Code\")\n",
+    "fpc.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page15#zipcode'\n",
+    "fpc.description = \"Foreign postal code.\"\n",
+    "fpc.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = fpc\n",
+    "pi.items = a\n",
+    "\n",
+    "opt = {'trues':['Yes'], 'falses':['No']}\n",
+    "pec = XdBooleanType(\"Presidential Election Campaign\", opt)\n",
+    "pec.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page16#pec'\n",
+    "pec.description = \"Select Yes if you, want $3 to go to this fund.\"\n",
+    "pec.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = pec\n",
+    "pi.items = a\n",
+    "\n",
+    "s_pec = XdBooleanType(\"Spouse Presidential Election Campaign\", opt)\n",
+    "s_pec.definition_url = 'https://www.irs.gov/pub/irs-pdf/i1040a.pdf/page16#pec'\n",
+    "s_pec.description = \"Select Yes if your spouse, wants $3 to go to this fund.\"\n",
+    "s_pec.published = True\n",
+    "a = XdAdapterType()\n",
+    "a.value = s_pec\n",
+    "pi.items = a\n",
+    "\n",
+    "print(pi)"
    ]
   },
   {
@@ -231,123 +245,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add the Cluster data structure.\n",
-    "DM.data = ERF"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You have seen previuosly how to add *metadata for the components* through applying RDF semantics.\n",
-    "Here you will add *metadata about the model* itself. This is also converted to RDF using the scripts provided with S3Model.\n",
-    "\n",
-    "We use standard Dublin Core Metadata elements http://dublincore.org/documents/1999/07/02/dces/\n",
-    "Note that elements; *title, type, date, format & identifier* are used but are not editable by the modeler.\n",
-    "\n",
-    "Take a look at the defaults by executing the next cell."
+    "# build a cluster for filing status and exemptions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    creator: 'Unknown'\n",
-      "    contribs: []\n",
-      "    subject: 'S3M Data Model Example'\n",
-      "    rights: 'Creative Commons'\n",
-      "    relation: 'None'\n",
-      "    coverage: 'Global'\n",
-      "    description: 'Needs a description.'\n",
-      "    publisher: 'Data Insights, Inc.'\n",
-      "    language: 'en-US'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(DM.showMetadata())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Edit the values here as desired by editing the properties. Try to make them meaningful in accordance with the example we created."
+    "# build a cluster for income"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    creator: 'Unknown'\n",
-      "    contribs: ['Someone', 'Noone']\n",
-      "    subject: 'S3M Data Model Example'\n",
-      "    rights: 'Creative Commons'\n",
-      "    relation: 'None'\n",
-      "    coverage: 'Global'\n",
-      "    description: 'Needs a description'\n",
-      "    publisher: 'Data Insights, Inc.'\n",
-      "    language: 'en-US'\n",
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "DM.md_creator = 'Unknown'\n",
-    "DM.md_contrib = 'Someone'\n",
-    "DM.md_contrib = 'Noone'\n",
-    "DM.md_subject = 'S3M Data Model Example'\n",
-    "DM.md_rights = 'Creative Commons'\n",
-    "DM.md_relation = 'None'\n",
-    "DM.md_coverage = 'Global'\n",
-    "DM.md_description = 'Needs a description'\n",
-    "DM.md_publisher = 'Data Insights, Inc.'\n",
-    "DM.md_language = 'en-US'\n",
-    "\n",
-    "print(DM.showMetadata())"
+    "# build a cluster for adjusted income"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote ./dmlib/dm-cjoa62rj1000lhhbi95pq7xzl.xsd\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "print(DM.exportDM())"
+    "# build a cluster for Tax, credits, and payments"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "You have completed this tutorial. Our *Knowledge Modeling for A.I.* course includes additional details and models that enhance the ability to perform aduting, assertion certifications and record the subject(s), provider(s) and participations of others regarding the data. \n",
-    "\n",
-    "See https://datainsights.tech for more details. "
+    "# build a cluster for refund and Amount you owe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build a cluster for third party"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build a cluster for signature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build a cluster for Paid preparer"
    ]
   }
  ],
