--- a/RM/3_1_0/notebooks/XdString Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdString Examples.ipynb
@@ -535,9 +535,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda env:S3Model]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-S3Model-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
