Cleanup environment to use Jupyter Lab

--- a/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
@@ -37,7 +37,16 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/tim/DII/S3Model/RM/3_1_0/notebooks\n",
+      "['', '/home/tim/DII/S3Model/RM/3_1_0/notebooks', '/home/tim/anaconda3/envs/S3Model/lib/python37.zip', '/home/tim/anaconda3/envs/S3Model/lib/python3.7', '/home/tim/anaconda3/envs/S3Model/lib/python3.7/lib-dynload', '/home/tim/anaconda3/envs/S3Model/lib/python3.7/site-packages', '/home/tim/anaconda3/envs/S3Model/lib/python3.7/site-packages/IPython/extensions', '/home/tim/.ipython', '../pylib/']\n"
+     ]
+    }
+   ],
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
@@ -89,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ClusterType : Personal Information, ID: cjoaehdq90001dpbih53ubkag\n"
+      "ClusterType : Personal Information, ID: cjobw9mjx0001xa8pwf3npnan\n"
      ]
     }
    ],
@@ -310,6 +319,13 @@
    "source": [
     "# build a cluster for Paid preparer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -328,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
