--- a/RM/3_1_0/notebooks/XdFile Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdFile Examples.ipynb
@@ -208,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:S3Model]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-S3Model-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
